--- a/__fixtures__/response.html
+++ b/__fixtures__/response.html
@@ -13,6 +13,6 @@
     <a href="/professions/nodejs">Node.js-программист</a>
 </h3>
 <script src="https://js.stripe.com/v3/"></script>
-<script src="https://ru.hexlet.io/packs/js/runtime.js"></script>
+<script src="http://localhost:3001/packs/js/runtime.js"></script>
 </body>
 </html>
